--- a/roles/dhcp-server/templates/local.conf.j2
+++ b/roles/dhcp-server/templates/local.conf.j2
@@ -8,3 +8,6 @@ dhcp-boot=pxelinux.0
 dhcp-authoritative
 enable-tftp
 tftp-root=/srv/tftp
+no-hosts
+host-record={{ inventory_hostname }},{{ eth_local_ip_address }}
+
