Debian installer constructs FQDN, so resolve it too.

--- a/roles/dhcp-server/templates/local.conf.j2
+++ b/roles/dhcp-server/templates/local.conf.j2
@@ -10,3 +10,4 @@ enable-tftp
 tftp-root=/srv/tftp
 no-hosts
 host-record={{ inventory_hostname }},{{ eth_local_ip_address }}
+host-record={{ inventory_hostname }}.{{ domain }},{{ eth_local_ip_address }}
