consume hash, not text.

--- a/roles/tftp-server/templates/preseed.cfg.j2
+++ b/roles/tftp-server/templates/preseed.cfg.j2
@@ -127,7 +127,7 @@ d-i passwd/make-user boolean true
 d-i passwd/user-fullname string Video Team User
 d-i passwd/username string {{ user_name }}
 # or encrypted using an MD5 hash.
-d-i passwd/user-password-crypted password {{ user_password |password_hash('sha512', pw_salt) }}
+d-i passwd/user-password-crypted password {{ user_password_hash }}
 {% if distro == 'Ubuntu' %}
 # Ubuntu offers encrypted home directories
 d-i user-setup/encrypt-home boolean false
